- `gui/quickfort`: delete blueprints from the blueprint load dialog
- `quickfort`: new ``delete`` command for deleting player-owned blueprints (library and mod-added blueprints cannot be deleted)
- `gui/quickfort`: allow farm plots, dirt roads, and paved roads to be designated around partial obstructions without callling it an error, matching vanilla behavior
- `gui/launcher`: refresh default tag filter when mortal mode is toggled in `gui/control-panel` so changes to which tools autocomplete take effect immediately
- `gui/civ-alert`: you can now register multiple burrows as civilian alert safe spaces
- `lever`: enable use of ``reqscript`` to access lever pulling functions.
- `exterminate`: add ``all`` target for convenient scorched earth tactics
- `caravan`: add shortcut to the trade request screen for selecting item types by value
- `gui/notify`: notification panel extended to apply to adventure mode
- `gui/control-panel`: highlight prefrences that have been changed from the defaults
- `gui/quickfort`: buildings can now be constructed in a "high priority" state, giving them first dibs on `buildingplan` materials and setting their construction jobs to the highest priority

## Removed
- `max-wave`: merged into `pop-control`
- `devel/find-offsets`, `devel/find-twbt`, `devel/prepare-save`: remove development scripts that are no longer useful
- `fix/item-occupancy`, `fix/tile-occupancy`: merged into `fix/occupancy`
- `adv-rumors`: merged into `advtools`

# 50.13-r2

## New Tools
- Updated for adventure mode: `gui/sandbox`, `gui/create-item`, `gui/reveal`
- `ghostly`: (reinstated) allow your adventurer to phase through walls
- `markdown`: (reinstated) export description of selected unit or item to a text file
- `adaptation`: (reinstated) inspect or set unit cave adaptation levels
- `fix/engravings`: fix corrupt engraving tiles
- `unretire-anyone`: (reinstated) choose anybody in the world as an adventurer